tests/compilefail08.out
[1mtests/compilefail08.pas:6:15: [0m[1m[91merror:[0m Symbol Redefined: a
     6 | function oops(a:integer):integer;